# visage-graphics-bindings

./: .gitignore  CMakeLists.txt  LICENSE  README.md
c_test_app/: CMakeLists.txt  main.c
visage-graphics-c/: CMakeLists.txt  visage_graphics_c.cpp  visage_graphics_c.h
visage-graphics-rs/: Cargo.toml
visage-graphics-rs/examples/: basic.rs  demo.rs  visage-graphics-bindings.code-workspace
visage-graphics-rs/src/: brush.rs  canvas.rs  color.rs  font.rs  gradient.rs  lib.rs  text.rs
visage-graphics-rs/visage-graphics-sys/: Cargo.toml  build.rs
visage-graphics-rs/visage-graphics-sys/src/: lib.rs
